# ciri

./: Cargo.toml  README.md
example_projects/cpp/: CMakeLists.txt
example_projects/node/: package-lock.json  package.json
src/: lib.rs  main.rs
src/args/: mod.rs  package.rs  project.rs  system.rs
src/commands/: mod.rs  package.rs
src/commands/package/: mod.rs
src/commands/package/clean/: mod.rs
src/commands/package/new/: cargo.rs  cpp.rs  mod.rs  node.rs
src/commands/package/run/: mod.rs
src/commands/system/: list.rs
src/components/: input.rs  mod.rs  table.rs
src/entities/: managers.rs  manifest.rs  mod.rs
src/parsers/: mod.rs  version.rs
src/parsers/package/: pacman.rs
src/parsers/system/: pacman.rs
src/validators/: detect_language.rs  inquire.rs  mod.rs  package.rs
