[package]
name = "ciri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "color"] }
clap_complete = "4.4.4"
comfy-table = "7.1.0"
crossterm = "0.27.0"
env_logger = "0.10.1"
inquire = "0.6.2"
log = "0.4.20"
nom = "7.1.3"
thiserror = "1.0.51"
tokio = "1.35.0"

[dev-dependencies]
env_logger = "0.10.1"
