[package]
name = "ciri"
version = "0.1.0"
edition = "2021"
description = "Everything you need in one place"
authors = ["p0unrakg@int.pl"]
license = "Apache-2.0"
homepage = "https://github.com/ponurakk/ciri"
repository = "https://github.com/ponurakk/ciri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "color"] }
clap_complete = "4.4.4"
crossterm = "0.27.0"
duct = "0.13.7"
flexi_logger = "0.27.3"
inquire = "0.6.2"
lazy_static = "1.4.0"
log = "0.4.20"
miette = { version = "5.10.0", features = ["fancy"] }
nom = "7.1.3"
ratatui = "0.25.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
spdx = "0.10.3"
tokio = "1.35.0"
which = "5.0.0"
